<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>backend-loader</artifactId>
    <dependencies>

        <dependency>
            <artifactId>project-server</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>lock-service</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>instance-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>instance-server</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>project-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>component-server</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>component-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>

        <dependency>
            <artifactId>guardian-server</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>guardian-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>

        <dependency>
            <artifactId>trigger-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>


        <dependency>
            <artifactId>authentication-client</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>
        <dependency>
            <artifactId>authentication-server</artifactId>
            <groupId>com.activepieces</groupId>
            <scope>compile</scope>
            <version>1.0</version>
        </dependency>


        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>scheduler-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>scheduler-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>


        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>actions-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>worker-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>worker-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>flow-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>flow-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>collection-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>collection-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>code-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>code-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>instance-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>instance-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>store-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>store-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>variable-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>variable-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>file-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>file-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>logging-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>logging-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>executor-client</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.activepieces</groupId>
            <artifactId>executor-server</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <modelVersion>4.0.0</modelVersion>
    <version>1.0</version>
    <parent>
        <artifactId>backend</artifactId>
        <groupId>com.activepieces</groupId>
        <version>1.0</version>
    </parent>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.22</version>
                        </path>
                        <!-- This is needed when using Lombok 1.18.16 and above -->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                        <!-- Mapstruct should follow the lombok path(s) -->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct</artifactId>
                            <version>1.5.0.Beta2</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <groupId>org.springframework.boot</groupId>
                <configuration>
                    <excludes>
                        <exclude>
                            <artifactId>lombok</artifactId>
                            <groupId>org.projectlombok</groupId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>dockerfile-maven-plugin</artifactId>
                <configuration>
                    <buildArgs>
                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                    </buildArgs>
                    <pullNewerImage>false</pullNewerImage>
                    <repository>docker-active-pieces-backend</repository>
                    <tag>${project.version}</tag>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>push</goal>
                        </goals>
                        <id>default</id>
                    </execution>
                </executions>
                <groupId>com.spotify</groupId>
                <version>1.4.13</version>
            </plugin>
        </plugins>
    </build>

</project>
